# mem-profile

./: Cargo.toml  README.md  patch_validate.diff  test_diff  test_diff.rs  test_parse_json  test_parse_json.rs  test_secure_read  test_secure_read.rs
.github/workflows/: auto-enable-merge.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: modular_guidelines.md  planning.md  proposed_features_roadmap.md  roadmap.md
examples/: test_flamegraph.rs  test_inferno.rs
src/: alert.rs  allocator.rs  backtrace.rs  diff.rs  flamegraph.rs  lib.rs  main.rs  pprof.rs  report.rs  snapshot.rs  tui.rs  tui.rs.orig
src/cli/: attach.rs  cargo.rs  mod.rs  run.rs
tests/: allocator_tests.rs
