[package]
name = "mem-profile"
version = "0.1.0"
edition = "2021"
authors = ["Jay <kolajy94@gmail.com>"]
description = "A high-performance memory profiling utility and custom global allocator for Rust."
license = "MIT"

[dependencies]
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
backtrace = { version = "0.3", optional = true }
clap = { version = "4.4", features = ["derive"] }
inferno = { version = "0.12.7", default-features = false }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
num-format = { version = "0.4.4", features = ["std"] }

[features]
default = ["capture-backtrace"]
capture-backtrace = ["dep:backtrace"]

[dev-dependencies]
# Dependencies for testing
